--- a/license-cloud/package.json
+++ b/license-cloud/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
